--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -10,6 +10,11 @@
  *
 */
 
+.page__lead {
+  font-family: $global-font-family;
+  font-size: $type-size-4;
+}
+
 @import "vendor/breakpoint/breakpoint"; // media query mixins
 @import "variables";
 @import "mixins";
