--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -28,7 +28,8 @@ $bodoni                     : "Bodoni MT", serif;
 $calisto                    : "Calisto MT", serif;
 $garamond                   : Garamond, serif;
 
-$global-font-family         : $sans-serif;
+* $global-font-family         : $sans-serif;
+$global-font-family         : $helvetica, Arial !default;
 $header-font-family         : $sans-serif;
 $caption-font-family        : $serif;
 
