--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -29,7 +29,7 @@ $calisto                    : "Calisto MT", serif;
 $garamond                   : Garamond, serif;
 
 /* $global-font-family         : $sans-serif; */
-$global-font-family         : $times;
+$global-font-family         : $serif;
 $header-font-family         : $sans-serif;
 $caption-font-family        : $serif;
 
