--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -28,10 +28,15 @@ $bodoni                     : "Bodoni MT", serif;
 $calisto                    : "Calisto MT", serif;
 $garamond                   : Garamond, serif;
 
-/* $global-font-family         : $sans-serif; */
-$global-font-family         : $serif;
+/* 
+$global-font-family         : $sans-serif; 
 $header-font-family         : $sans-serif;
 $caption-font-family        : $serif;
+*/
+
+$global-font-family         : $serif, Georgia;
+$header-font-family         : $serif, Georgia;
+$caption-font-family        : $serif, Georgia;
 
 /* type scale */
 $type-size-1                : 2.441em;  // ~39.056px
