--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -34,9 +34,9 @@ $header-font-family         : $sans-serif;
 $caption-font-family        : $serif;
 */
 
-$global-font-family         : $serif, Georgia;
-$header-font-family         : $serif, Georgia;
-$caption-font-family        : $serif, Georgia;
+$global-font-family         : $serif;
+$header-font-family         : $serif;
+$caption-font-family        : $serif;
 
 /* type scale */
 $type-size-1                : 2.441em;  // ~39.056px
