--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -10,6 +10,13 @@
  *
 */
 
+/* Override theme defaults */
+$base-font-family: HelveticaNeu;
+$brand-color: orange;
+
+/* load _sass/minima.scss */
+@import "minima";
+
 @import "vendor/breakpoint/breakpoint"; // media query mixins
 @import "variables";
 @import "mixins";
